<resources>
    <string name="app_name">test1</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Cart</string>
    <string name="price_unit">Price per Unit</string>
    <string name="button_add">Item Total</string>
    <string name="total_dispaly">0.00</string>
    <string name="num_units">Number of Units</string>
    <string name="total_text">Cart Total =</string>
    <string name="item_total_text">Total =</string>
    <string name="item_total">0.00</string>
    <string name="add_cart">Add to Cart</string>
    <string name="remove_last">Remove Last Item From Cart</string>
</resources>
